compiler/test/fail_compilation/diag11759.d
/*
TEST_OUTPUT:
---
fail_compilation/diag11759.d(10): Error: lower case integer suffix 'l' is not allowed. Please use 'L' instead
ulong x = 123ul;
          ^
---
*/

ulong x = 123ul;
